[#19-FIX] fix dark mode (#22)

--- a/src/(Components)/DarkModeToggle/DarkModeToggle.scss
+++ b/src/(Components)/DarkModeToggle/DarkModeToggle.scss
@@ -3,9 +3,6 @@ body {
     background 0.3s ease-in-out,
     color 0.3s ease-in-out;
 }
-body.dark-mode {
-  background-color: #292b33;
-}
 
 .toggle-container {
   width: 60px;
@@ -58,29 +55,23 @@ body.dark-mode {
 
   .icon {
     position: absolute;
-    transition:
-      opacity 0.5s ease-in-out,
-      transform 0.5s ease-in-out;
-  }
-
-  .light-icon {
-    opacity: 1;
-    transform: rotate(0deg);
+    transition: transform 0.5s ease-in-out;
   }
 
   .dark-icon {
-    opacity: 0;
+    transform: rotate(0deg);
+  }
+
+  .light-icon {
     transform: rotate(-180deg);
   }
 
   .dark-mode & {
     .light-icon {
-      opacity: 0;
       transform: rotate(180deg);
     }
 
     .dark-icon {
-      opacity: 1;
       transform: rotate(0deg);
     }
   }
